Se corrigen bugs